[build-system]
requires = ["setuptools>=71.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litestash"
version = "0.1.0b1" description = "The LiteStash Python project offers a lightning-fast, lightweight key-value storage solution.  LiteStash provides a NoSQL API for seamless integration into your applications.  The LiteStash database handles the data with SQLite transparently.  Optimal use for caching, session management, and other high-performance use cases.
"
authors = [{ name = "Jonathan Cain", email = "mail@mesotron.dev" }]
readme = "README.md"  
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",         
    "Intended Audience :: Developers",
    "Topic :: Database :: Sqlite",
    "Topic :: NoSQL",
    "Topic :: SQL",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "sqlalchemy>=2.0",
    "annotated-types==0.7.0",
    "astroid==3.2.3",
    "coverage==7.6.0",
    "dill==0.3.8",
    "greenlet==3.0.3",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "mccabe==0.7.0",
    "orjson==3.10.6",
    "packaging==24.1",
    "platformdirs==4.2.2",
    "pluggy==1.5.0",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "pylint==3.2.5",
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.31",
    "sqlmodel==0.0.19",
    "tomlkit==0.13.0",
    "typing_extensions==4.12.2",
]

[project.urls]
Homepage = "https://github.com/nortosem/LiteStash" 
Documentation = "https://github.com/nortosem/LiteStash/blob/master/README.md"

[tool.setuptools.packages.find]
include = ["litestash"]  # List of packages to include

#[project.scripts]
#litestash = "litestash.main:app"  # TODO

